--- a/generators/server/templates/src/main/resources/config/application.yml.ejs
+++ b/generators/server/templates/src/main/resources/config/application.yml.ejs
@@ -246,6 +246,9 @@ spring:
             hibernate.cache.infinispan.entity.expiration.lifespan: 3600000
             hibernate.cache.infinispan.entity.memory.size: 1000
             hibernate.cache.infinispan.jgroups_cfg: default-configs/default-jgroups-tcp.xml
+                <%_ } else if (cacheProvider === 'ignite') { _%>
+            hibernate.cache.region.factory_class: org.apache.ignite.cache.hibernate.HibernateRegionFactory
+            hibernate.cache.use_minimal_puts: true
                 <%_ } _%>
             <%_ } _%>
         hibernate:
